# statbelmail

./: .gitignore  README.md  README_local.md  TEMPLATE_SYSTEM.md  analyze_data.py  generate_building_reports.py  main.py  pyproject.toml  pyproject_local.toml
data/csv/: Bouwvergunningen_voor_woongebouwen,_indeling_naar_arrondissementen.csv  Renovatie_per_bestemming.csv
notebooks/: analyse.ipynb
reports/building_permits/: BRUSSELS_HOOFDSTEDELIJK_GEWEST_rapport.html  PROVINCIE_ANTWERPEN_rapport.html  PROVINCIE_HENEGOUWEN_rapport.html  PROVINCIE_LIMBURG_rapport.html  PROVINCIE_LUIK_rapport.html  PROVINCIE_LUXEMBURG_rapport.html  PROVINCIE_NAMEN_rapport.html  PROVINCIE_OOST-VLAANDEREN_rapport.html  PROVINCIE_VLAAMS-BRABANT_rapport.html  PROVINCIE_WAALS-BRABANT_rapport.html  PROVINCIE_WEST-VLAANDEREN_rapport.html  VLAAMS_GEWEST_rapport.html  WAALS_GEWEST_rapport.html  index.html
src/: __init__.py  building_permits_report.py  date_utils.py  excel_analyzer.py  html_report.py  template_manager.py
static/css/: styles.css
templates/: base.html  building_permits_report.html  generic_report.html  index.html
