[project]
name = "statbelmail"
version = "0.1.0"
description = "StatBel building permits analysis with interactive visualizations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.0",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
]
